# CodingCPP

./: .gitignore  README.md  config.bat
01_hello_world/: CMakeLists.txt
02_lib_gtest/: CMakeLists.txt
02_lib_gtest/lib/: basic_gtest_lib.cpp
02_lib_gtest/src/: CMakeLists.txt  basic_gtest.cpp
02_lib_gtest/test/: CMakeLists.txt  ExampleTest.cpp
03_lib_gtest_vcpkg/: CMakeLists.txt
04_coding_tasks/: CMakeLists.txt
04_coding_tasks/lib/: 003_LongestSubstring.cpp  004_Median_of_Two_Sorted_Arrays.cpp  005_Longest_Palindromic_Substring.cpp  006_ZigZag_Conversion.cpp  011_Container_With_Most_Water.cpp  012_Integer_To_Roman.cpp  013_Roman_To_Integer.cpp  014_Longest_Common_Prefix.cpp  015_3Sum.cpp  016_3Sum_Closest.cpp  018_4Sum.cpp  LibSolution.h  xxx_yyy.cpp
04_coding_tasks/test/: CMakeLists.txt  test_003_Longest_Substring.cpp  test_004_Median_of_Two_Sorted_Arrays.cpp  test_005_Longest_Palindromic_Substring.cpp  test_006_ZigZag_Conversion.cpp  test_011_Container_With_Most_Water.cpp  test_012_Integer_To_Roman.cpp  test_015_3Sum.cpp  test_018_4Sum.cpp  test_020_Valid_Parentheses.cpp  test_021_Merge_Two_Sorted_Lists.cpp
05_1_smart_pointer/: create.bat
05_2_templates/lib/: test_class.h
05_cpp_features/lib/: 001_Two_Sum.cpp  LibSolution.h
06_networking/: create.bat
06_networking/Client/: CMakeLists.txt
07_ray_tracer_cpp/: CMakeLists.txt
07_ray_tracer_cpp/lib/generator/: CMakeLists.txt
07_ray_tracer_cpp/lib/scene/: CMakeLists.txt  Sphere3D.cpp  Sphere3D.h
07_ray_tracer_cpp/lib/util/: CMakeLists.txt  Color.h  ColorValue.h  Dir3D.cpp  Dir3D.h  Point3D.h  Util.cpp  Util.h  Vector3D.h  lib.cpp  lib.h  ray.cpp  ray.h
07_ray_tracer_cpp/src/: RayTracer.cpp
07_ray_tracer_cpp/test/: CMakeLists.txt  ExampleTest.cpp  Test1.cpp
coding_tasks/lib/: 003_LongestSubstring.cpp  014_Longest_Common_Prefix.cpp  017_Letter_Combinations_Of_A_Phone_Number.cpp  019_Remove_Nth_Node_From_End_Of_List.cpp  020_Valid_Parentheses.cpp  021_Merge_Two_Sorted_Lists.cpp  LibSolution.h  test_lib.h
coding_tasks/test/: CMakeLists.txt  test_001_Two_Sum.cpp  test_002_Add_Two_Numbers.cpp  test_003_Longest_Substring.cpp  test_013_Roman_To_Integer.cpp  test_014_Longest_Common_Prefix.cpp  test_016_3Sum_Closest.cpp  test_017_Letter_Combinations_Of_A_Phone_Number.cpp  test_019_Remove_Nth_Node_From_End_Of_List.cpp  test_xxx_yyy.cpp
rayTracer/: CMakeLists.txt  Doxyfile  README.md
rayTracer/Design/: raytracing.md
rayTracer/src/: CMakeLists.txt
rayTracer/test/: CMakeLists.txt  mock_objects.h  test_BasicColorCalculation.cpp  test_Color.cpp  test_ColorValue.cpp  test_Cone3D.cpp  test_Cylinder3D.cpp  test_Dir3D.cpp  test_Intersection.cpp  test_LightRay.cpp  test_Material.cpp  test_OutputPicture.cpp  test_Plane3D.cpp  test_Point3D.cpp  test_ReflectedColorCalculation.cpp  test_Scene.cpp  test_SceneFactory.cpp  test_SceneTracer.cpp  test_ShadowColorCalculation.cpp  test_Sphere3D.cpp  test_Torus3D.cpp  test_Triangle3D.cpp  test_Util.cpp  test_Vector3D.cpp
spikes/01_hello_world/: CMakeLists.txt
spikes/02_lib_gtest/: CMakeLists.txt  CMakeLists.txt.bak
spikes/03_01_lib_gtest_vcpkg/: CMakeLists.txt
spikes/03_02_lib_gmock/: CMakeLists.txt  create.bat  readme.md
spikes/03_02_lib_gmock/test/: CMakeLists.txt  CMakeLists.txt.bak  testMain.cpp  test_Util.cpp
spikes/05_1_smart_pointer/: CMakeLists.txt  create.bat
spikes/05_2_templates/: CMakeLists.txt
spikes/05_cpp_features/: CMakeLists.txt
spikes/08_data_transfer/: CMakeLists.txt
spikes/08_data_transfer/lib/util/: cpp_template_lib.cpp  cpp_template_lib.h
spikes/08_data_transfer/src/: data_transfer.cpp
spikes/08_data_transfer/test/: CMakeLists.txt  test_data_transfer.cpp
spikes/09_MoveData/: CMakeLists.txt
spikes/10_SmartPointers/: CMakeLists.txt
xx_template/: CMakeLists.txt
xx_template/lib/: cpp_template_lib.cpp  cpp_template_lib.h
xx_template/src/: cpp_template.cpp
(+64 files in other folders)
